# rust-lineindex

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
