[package]
name = "lineindex"
description = "Simple line-indexed string"
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-lineindex.git"
license = "MIT"
readme = "README.md"
edition = "2021"
publish = true

[dependencies]

[dev-dependencies]
pretty_assertions = "1.3.0"
